samples/_failures_safe/1761088822_338a0e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e53221b3.c: In function ‘print_stats’:
./samples/SAFE/__tmp_e53221b3.c:122:5: error: expected identifier at end of input
  122 |     printf("Most frequent level: %s\n", analyzer->
      |     ^~~~~~
./samples/SAFE/__tmp_e53221b3.c:122:5: error: expected declaration or statement at end of input
